p3/confs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev
  namespace: dev
spec:
  selector:
    app: playground
  ports:
    - port: 80
      targetPort: 8888
