p3/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: "http://argocd.localhost"
spec:
  rules:
  - host: argocd.localhost
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev
  namespace: dev
spec:
  rules:
  - host: dev.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-service
            port:
              number: 8888
